fixed alignment

--- a/styles/content-card.css
+++ b/styles/content-card.css
@@ -1,17 +1,9 @@
 .card {
-    height: 120%;
-    min-height: 120%;
+    height: 100%;
+    min-height: 100%;
     scroll-snap-align: center;
     scroll-snap-stop: always;
-}
-
-.card-background {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100%;
-    height: 100%;
+    position: relative;
 }
 
 .card-content-body {
@@ -20,15 +12,14 @@
     color: black;
 }
 
-.card-content {
+.card-content-container {
+    margin: auto;
     width: 100%;
-    min-height: 100%;
-    top: 0;
-    display: flex;
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-direction: column;
-    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 .card-header {
@@ -39,5 +30,4 @@
     margin: 0;
     font-size: 25px;
     letter-spacing: 10px;
-
 }
